[package]

name = "generic-array"
version = "0.7.1"
authors = [ "Bartłomiej Kamiński <fizyk20@gmail.com>" ]
description = "Generic types implementing functionality of arrays"
license = "MIT"
repository = "https://github.com/fizyk20/generic-array.git"
documentation = "http://fizyk20.github.io/generic-array/generic_array/"

[lib]
name = "generic_array"

[dependencies]
typenum = "~1.5"
serde = { version = "~0.9", optional = true, default-features = false }

[dependencies.nodrop]
version = "~0.1"
default-features = false

[dev_dependencies]
# this can't yet be made optional, see https://github.com/rust-lang/cargo/issues/1596
serde_json = "~0.9"
