[package]

name = "generic-array"
version = "1.1.0"
authors = ["Bartłomiej Kamiński <fizyk20@gmail.com>", "Aaron Trent <novacrazy@gmail.com>"]
edition = "2021"

description = "Generic types implementing functionality of arrays"
readme = "README.md"

license = "MIT"

documentation = "https://fizyk20.github.io/generic-array/generic_array/"
repository = "https://github.com/fizyk20/generic-array.git"

keywords = ["generic", "array"]
categories = ["data-structures", "no-std"]
include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]

[lib]
name = "generic_array"

[features]
alloc = []
internals = []

[dependencies]
typenum = { version = "1.17", features = ["const-generics"] }
const-default = { version = "1", optional = true, default-features = false }
serde = { version = "1.0", optional = true, default-features = false }
zeroize = { version = "1", optional = true, default-features = false }
faster-hex = { version = "0.9", optional = true, default-features = false }

[dev-dependencies]
# this can't yet be made optional, see https://github.com/rust-lang/cargo/issues/1596
serde_json = "1.0"
bincode = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"

[[bench]]
name = "hex"
path = "benches/hex.rs"
harness = false

[profile.bench]
opt-level = 3
lto = 'fat'
codegen-units = 1

[package.metadata.docs.rs]
# all but "internals", don't show those on docs.rs
features = ["serde", "zeroize", "const-default", "alloc"]
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.playground]
all-features = true
